--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="links">
     <ul>
     <li><a href="https://yurevvn.github.io/05.02/">Оформление текстов</a></li>
-
+    <li><a href="https://github.com/yurevvn/spiskii/tree/main">Оформление списков</a></li>
     </ul>
   </div>
 </body>
