--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <ul>
     <li><a href="https://yurevvn.github.io/05.02/">Оформление текстов</a></li>
     <li><a href="https://github.com/yurevvn/spiskii/tree/main">Оформление списков</a></li>
-    </ul>
+    <li><a href="ispgrafiki.html">Графика HTML</a></li>
   </div>
 </body>
 </html>
