--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <div class="title">Домашние задания</div>
   <div class="links">
     <ul>
+      <li><a href="file:///C:/Users/User/Desktop/Domashnie%20zadanie/3.HTML" Дз (расписание)</a></li>
     <li><a href="https://yurevvn.github.io/05.02/">Оформление текстов</a></li>
     <li><a href="https://github.com/yurevvn/spiskii/tree/main">Оформление списков</a></li>
     <li><a href="ispgrafiki.html">Графика HTML</a></li>
