--- a/ispgrafiki.html
+++ b/ispgrafiki.html
@@ -65,7 +65,7 @@
 <div style=" position: relative;width: 523px;height: 484px;border: 1px solid black;;margin-left: 39%;background-color: rgb(250, 114, 255);">
 <img src="https://avatars.mds.yandex.net/i?id=ca937cf6a5a673d4f570de76464569f5_l-5505644-images-thumbs&n=13" style=" width: 300px;height: 200px;position: absolute;margin-top: 20%;margin-left: 20%;;border: 20px solid rgb(0, 0, 0);" alt="">
 <img src="https://i10.fotocdn.net/s213/c110f7a48affc4f2/public_pin_l/2822393199.jpg"  style=" width: 300px;height: 200px;border: 20px solid rgb(0, 0, 0);" alt="">
-<img src="https://media.moddb.com/images/groups/1/3/2392/cat-wallpaper-usa-hd-wallpapers.jpg"  style=" width: 300px;height: 200px;border: 20px solid rgb(0, 0, 0);margin-left: 35%;position: relative;" alt=""></div>
+<img src="https://i.pinimg.com/originals/43/47/16/43471696b829cd35c4febe85b718db63.jpg"  style=" width: 300px;height: 200px;border: 20px solid rgb(0, 0, 0);margin-left: 35%;position: relative;" alt=""></div>
 <a href="index.html">BACK</a>
 </body>
 </html>
