--- a/ispgrafiki.html
+++ b/ispgrafiki.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Графика</title>
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <b style="font-size: 20px;">Задание 1</b>
