--- a/index.html
+++ b/index.html
@@ -1,49 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Домашние задания Юрьева Никиты</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      background-color: rgb(72, 206, 250);
-      color: red;
-    }
-    .title {
-      padding: 20px;
-      font-size: 3em;
-
-      font-weight: bold;
-      color: Indigo;
-      text-align: center;
-      background-color: DeepSkyBlue (255, 0, 0, 0.8);
-    }
-    .links {
-      margin-top: 20px;
-      text-align: center;
-    }
-    .links ul {
-      list-style: none;
-      padding: 0;
-    }
-    .links li {
-      margin-bottom: 10px;
-    }
-    .links a {
-      color: rgb(139, 34, 34);
-      text-decoration: none;
-      font-size: 1.2em;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Домашние задания Юрьева Никиты</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="title">Домашние задания</div>
-  <div class="links">
-    <ul>
-    <li><a href="https://yurevvn.github.io/-/"> Дз (расписание) </a></li>
-    <li><a href="https://yurevvn.github.io/05.02/">Оформление текстов</a></li>
-    <li><a href="https://yurevvn.github.io/spiskii/">Оформление списков</a></li>
-    <li><a href="ispgrafiki.html">Графика HTML</a></li>
+  <div class="text">
+  <center><strong>
+    <h1 class="rainbow-text">Домашние задания!</h1>
+  </strong></center>
   </div>
+  <div class="li">
+  <center>
+  <li><a href="https://yurevvn.github.io/-/">Дз (расписание)</a></li>
+  <li><a href="https://yurevvn.github.io/05.02/">Оформление текстов</a></li>
+  <li><a href="https://yurevvn.github.io/spiskii/">Оформление списков</a></li>
+  <li><a href="https://yurevvn.github.io/WSitewHM/ispgrafiki.html">Графика HTML</a></li>
+  </center>
+</div>
 </body>
 </html>
