--- a/RASP.HTML
+++ b/RASP.HTML
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Расписание занятий 3-11 классов</title>
 </head>
-
+ <a href="index.html">BACK</a>
      <P ALIGN="CENTER">
      <FONT COLOR="Indigo" SIZE="7">
      <B>Расписание</B></FONT><BR>
