--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </div>
   <div class="li">
   <center>
+  <li><a href="https://github.com/yurevvn">Мой git</a></li>
   <li><a href="https://yurevvn.github.io/-/">Дз (расписание)</a></li>
   <li><a href="https://yurevvn.github.io/05.02/">Оформление текстов</a></li>
   <li><a href="https://github.com/yurevvn/WSitewHM/commit/e34118dce8042587d3572fbd542cfc4ae952c63d#diff-25038995855ba38248d1cb56985a7535fcd9846a32861e75b05b6498e791fcf3">Оформление списков</a></li>
