--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <div class="li">
   <center>
   <li><a href="https://github.com/yurevvn">Мой git</a></li>
-  <li><a href="https://yurevvn.github.io/-/">Дз (расписание)</a></li>
-  <li><a href="https://yurevvn.github.io/WSitewHM/">Оформление текстов</a></li>
-  <li><a href="https://github.com/yurevvn/WSitewHM/commit/e34118dce8042587d3572fbd542cfc4ae952c63d#diff-25038995855ba38248d1cb56985a7535fcd9846a32861e75b05b6498e791fcf3">Оформление списков</a></li>
-  <li><a href="https://yurevvn.github.io/WSitewHM/ispgrafiki.html">Графика HTML</a></li>
+  <li><a href="RASP.HTML">Расписание уроков</a></li>
+  <li><a href="oformtextovv.html">Оформление текстов</a></li>
+  <li><a href="Оформление списков.html">Оформление списков</a></li>
+  <li><a href="ispgrafiki.html">Графика HTML</a></li>
   </center>
 </div>
 </body>
