--- a/RASP.HTML
+++ b/RASP.HTML
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Расписание занятий 3-11 классов</title>
+   <link rel="stylesheet" href="style.css">
 </head>
  <a href="index.html">BACK</a>
      <P ALIGN="CENTER">
