--- a/Оформление списков.html
+++ b/Оформление списков.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Списки</title>
+ <link rel="stylesheet" href="style.css">
 </head>
+<a href="index.html">BACK</a>
 <body>
     <h1 ALIGN=CENTER >Задание 1</h1>
     <H1 ALIGN=CENTER>Нумерованный список </Н1>
