--- a/3.HTML
+++ b/3.HTML
@@ -1,6 +1,7 @@
 <HTML>
     <HEAD>
     <TITLE>Расписание занятий 5 классов</TITLE>
+ <link rel="stylesheet" href="style.css">
     </HEAD>
     <BODY BGCOLOR="FFFFFF">
      <P ALIGN="CENTER">
