--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <li><a href="oformtextovv.html">Оформление текстов</a></li>
   <li><a href="Оформление списков.html">Оформление списков</a></li>
   <li><a href="ispgrafiki.html">Графика HTML</a></li>
+  <li><a href="HyperLinks/fwithfs.html">Гиперссылки</a></li>
   </center>
 </div>
 </body>
