--- a/HyperLinks/fwithfs.html
+++ b/HyperLinks/fwithfs.html
@@ -6,6 +6,7 @@
     <title>Домашние задания Юрьева Никиты</title>
     <link rel="stylesheet" href="../style.css">
 </head>
+ <a href="../index.html">BACK</a>
 <body>
   <div class="text">
   <center><strong>
