--- a/HyperLinks/1.html
+++ b/HyperLinks/1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Гиперссылки</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
-<a href="index.html">BACK</a>
+<a href="fwithfs.html">BACK</a>
 <body>
     <b >Задание 1</b>
     <h1 ALIGN=CENTER> Первая страница </h1>
