--- a/HyperLinks/5zadanie1.html
+++ b/HyperLinks/5zadanie1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
-<a href="index.html">BACK</a>
+<a href="fwithfs.html">BACK</a>
 <body>
     <h2 align="center">Задание 5</h2>
     <div style="width: 523px;border: 1px solid black;;margin-left: 37%;background-color: rgb(255, 238, 0);"><center><h2 style="color: rgb(255, 0, 0);">Главная страница</h2></center>
