--- a/HyperLinks/dict.html
+++ b/HyperLinks/dict.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Анкера</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <b>Задание 4</b>
     <br>
-    <a href="obhfile.html">BACK</a>
+    <a href="fwithfs.html">BACK</a>
     <h1 ALIGN=CENTER> Оглавление </h1>
         <P ALIGN=CENTER> <A HREF=dict.html#1> Сервис Telnet </A> </P>
         <P ALIGN=CENTER> <A HREF=dict.html#2> Сервис FTP </A> </P>
