--- a/HyperLinks/lisitcina.html
+++ b/HyperLinks/lisitcina.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    <link rel="stylesheet" href="../style.css">
 <body>
-    <h2 align="center">№8</h2>
+    <h2 align="center">Задание 8</h2>
     <h3 style="color: red; margin-bottom: -20px;" align="center">Личная карточка сотрудника</h3>
     <div style="margin-left: 37%;">
     <div style="width: 700px; display: flex;">
