--- a/Оформление списков.html
+++ b/Оформление списков.html
@@ -80,3 +80,41 @@
     </li>
     </ol>
     </div>
+         <p>Задание 6</p>
+
+<div style=" padding: 20px; border: 1px solid black; width: fit-content; background-color: rgb(229, 255, 0);margin-left: 41%;">
+<h1 style="color: rgb(255, 0, 0);">Города Белоруссии</h1>
+<p>Витебская область</p>
+<ol type="A">
+    <li>Витебск</li>
+    <li>Полоцк</li>
+</ol>
+<p >Минская область</p>
+<ol type="I">
+    <li>Минск</li>
+    <li>Борисов</li>
+ </ol>
+<p >Гродненская область</p>
+<ol type="a">
+    <li>Гродно</li>
+    <li>Лида</li>
+</ol>
+<p>Могилевская область</p>
+<ol type="1">
+     <li>Могилев</li>
+     <li>Горки</li>
+</ol>
+<p>Брестская область</p>
+<ol type="i">
+    <li>Брест</li>
+     <li>Пинск</li>
+</ol>
+<p>Гомельская область</p>
+<ul>
+    <li>Гомель</li>
+    <li>Мозырь</li>
+</ul>
+</div>
+<a href="index.html">BACK</a>
+</body>
+</html>
