--- a/Оформление списков.html
+++ b/Оформление списков.html
@@ -115,6 +115,42 @@
     <li>Мозырь</li>
 </ul>
 </div>
+         <h2 align="center">№7</h2>
+<center>
+<div style="background-color: rgb(229,223,235); width: 300px;">
+<b><font style="color: rgb(122, 41, 41);"><h5 align="center" style="margin-bottom: -5px;">Список литературы</h5></font></b>
+<font size="2">
+<ul>
+    <p align="left" style="margin-left: -30px;">1. <b><font style="color: red;">Л.Н.Толстой </font> </b> "Война и мир"</p>
+    <p align="left" style="margin-left: -30px; margin-top: -10px;">2. <b><font style="color: red;">Л.Н.Толстой </font> </b> "Анна Каренина"</p>
+    <p align="left" style="margin-left: -30px; margin-top: -10px;">1. <b><font style="color: green;">А.С.Пушкин </font> </b> "Капитанская дочка"</p>
+    <p align="left" style="margin-left: -30px; margin-top: -10px;">2. <b><font style="color: green;">А.С.Пушкин </font> </b> "Евгений Онегин"</p>
+    <p align="left" style="margin-left: -30px; margin-top: -10px;">3. <b><font style="color: green;">А.С.Пушкин </font> </b> "Маленькие трагедии"</p>
+    <p align="left" style="margin-left: -30px; margin-top: -10px;">1. <b><font style="color: blue;">М.Ю.Лермонтов </font> </b> "Мцыри"</p>
+</ul>
+</font>
+</div>
+</center>
+<h2 align="center">№8</h2>
+<center>
+<div style="background-color: rgb(252,211,181); width: 350px;">
+<b><font style="color: rgb(0, 0, 122);"><h4 align="center" style="margin-bottom: -5px;">Хищники</h4></font></b>
+<ul>
+    <b><p align="left" style="margin-left: -30px;"><font style="color: red;"><i>1. Медвежьи</i></font></p></b>
+    <b><p align="left" style="margin-top: -10px;" ><font style="color: rgb(0, 184, 0);">• Медведи</font></p></b>
+    <p style="margin-top: -15px; margin-left: -50px;"><small>○ Бурый медведь, Белый медведь</small></p>
+    <b><p align="left" style="margin-top: -10px;" ><font style="color: rgb(0, 184, 0);">• Панды</font></p></b>
+    <p style="margin-top: -15px; margin-left: -50px;"><small>○ Большая панда, Малая панда</small></p>
+    <b><p align="left" style="margin-left: -30px;"><font style="color: red;"><i>2. Собачьи</i></font></p></b>
+    <b><p align="left" style="margin-top: -10px;" ><font style="color: rgb(0, 184, 0);">• Волки</font></p></b>
+    <p style="margin-top: -15px; margin-left: -100px;"><small>○ Шакал, Красный волк</small></p>
+    <b><p align="left" style="margin-top: -10px;" ><font style="color: rgb(0, 184, 0);">• Лисы</font></p></b>
+    <p style="margin-top: -15px; margin-left: -100px;"><small>○ Лиса рыжая, Фенек</small></p>     
+</ul>
+</div>
+</center>
+</body>
+</html>
 <a href="index.html">BACK</a>
 </body>
 </html>
