--- a/HyperLinks/fwithfs.html
+++ b/HyperLinks/fwithfs.html
@@ -18,6 +18,7 @@
   <li><a href="1.html">Задания 1-3</a></li>
   <li><a href="dict.html">Задание 4</a></li>
   <li><a href="5zadanie1.html">Задания 5-9</a></li>
+  <li><a href="https://github.com/yurevvn/WSitewHM/blob/main/Проверка%20дз%20гиперссылки/dzegor4kk.md">Проверка Егорки</a></li>
   </center>
 </div>
 </body>
