--- a/formlb.html
+++ b/formlb.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formi</title>
+    <link rel="stylesheet" href="style.css">
+    <a href="index.html">BACK</a>
 </head>
 <body>
     <form>
