--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <li><a href="Оформление списков.html">Оформление списков</a></li>
   <li><a href="ispgrafiki.html">Графика HTML</a></li>
   <li><a href="HyperLinks/fwithfs.html">Гиперссылки</a></li>
+  <li><a href="formlb.html">Формы</a></li>
   </center>
 </div>
 </body>
