--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <li><a href="ispgrafiki.html">Графика HTML</a></li>
   <li><a href="HyperLinks/fwithfs.html">Гиперссылки</a></li>
   <li><a href="formlb.html">Формы</a></li>
+  <li><a href="фреймы.html">Фреймы</a></li>
   </center>
 </div>
 </body>
