--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="text">
   <center><strong>
-    <h1 class="rainbow-text">Домашние задания!</h1>
+    <h1 class="rainbow-text">Домашние задания</h1>
   </strong></center>
   </div>
   <div class="li">
@@ -23,6 +23,7 @@
   <li><a href="HyperLinks/fwithfs.html">Гиперссылки</a></li>
   <li><a href="formlb.html">Формы</a></li>
   <li><a href="фреймы.html">Фреймы</a></li>
+  <li><a href="pozelovsloi.html">Позиционирование элементов и слои</a></li>
 </ul> 
   </center>
 </div>
